[package]
name = "iron"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
bytemuck = "1.8.0"
dirs = "4.0.0"
glow = "0.11.2"
glutin = "0.28.0"
rand = "0.8.5"
rusttype = { version = "0.9.2", features = ["gpu_cache"] }
serde = { version = "1.0.136", features = ["derive"] }
toml = "0.5.9"

[features]
debug = []
