[package]
name = "iron"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
bytemuck = "1.22.0"
dirs = "6.0.0"
glow = "0.16.0"
glutin = "0.32.2"
glutin-winit = "0.5"
rand = "0.9.0"
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
winit = "0.30.9"

[features]
debug = []
